--- a/src/utils/normalize.scss
+++ b/src/utils/normalize.scss
@@ -13,6 +13,10 @@
   font-display: swap;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 html {
   font-family: 'Nunito', sans-serif;
   font-style: normal;
@@ -20,7 +24,6 @@ html {
   font-size: 16px;
   line-height: 26px;
   color: rgba(0, 0, 0, 0.87);
-  scroll-behavior: smooth;
 }
 
 body {
@@ -42,6 +45,6 @@ label {
 
 h1,
 h2 {
-  font-size: 40px;
-  line-height: 40px;
+  font-size: 2em;
+  line-height: 2em;
 }
