context, loader & areaSelect were added

--- a/src/app.scss
+++ b/src/app.scss
@@ -21,4 +21,13 @@
       gap: 20px;
     }
   }
+
+  &__content {
+    margin: 0 auto;
+    max-width: 500px;
+
+    @include onTablet {
+      margin: 0;
+    }
+  }
 }
