--- a/src/components/AreasSelect/AreasSelect.scss
+++ b/src/components/AreasSelect/AreasSelect.scss
@@ -1,8 +1,7 @@
 @import '../../utils/mixins';
 
 .areaSelect {
-  margin: 0 auto 10px;
-  width: max-content;
+  margin: 0 0 10px;
 
   @include onTablet {
     margin: 0 0 10px;
@@ -12,6 +11,11 @@
     padding: 5px;
     border-radius: 2px;
     border: 1px solid #9c9c98;
+    font-size: 12px;
     outline: none;
+
+    @include onTablet {
+      font-size: 16px;
+    }
   }
 }
