--- a/src/components/CitySelect/CitySelect.scss
+++ b/src/components/CitySelect/CitySelect.scss
@@ -9,6 +9,8 @@
 
   &__select{
     padding: 5px;
+    min-width: 300px;
+    width: 100%;
     border-radius: 2px;
     border: 1px solid #9c9c98;
     font-size: 12px;
