base layout for input

--- a/src/utils/normalize.scss
+++ b/src/utils/normalize.scss
@@ -21,8 +21,8 @@ html {
   font-family: 'Nunito', sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
-  line-height: 26px;
+  font-size: 12px;
+  line-height: 150%;
   color: rgba(0, 0, 0, 0.87);
 }
 
