--- a/src/components/StartButton/StartButton.scss
+++ b/src/components/StartButton/StartButton.scss
@@ -2,7 +2,7 @@
 
 .button {
   padding: 10px;
-  font-weight: 500;
+  font-size: 16px;
   text-decoration: none;
 
   background-color: $prymaryButton;
