history was created

--- a/src/additionalStyles/ContainerStyles.scss
+++ b/src/additionalStyles/ContainerStyles.scss
@@ -1,6 +1,8 @@
 .list {
   box-sizing: border-box;
   padding: 2px;
+  display: flex;
+  flex-direction: column;
   width: fit-content;
   max-width: 400px;
   border-radius: 2px;
