--- a/src/components/Tracking/Tracking.scss
+++ b/src/components/Tracking/Tracking.scss
@@ -1,3 +1,25 @@
+@import '../../utils/mixins';
+
 .tracking {
-  width: fit-content;
+  width: 100%;
+
+  &__container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    @include onTablet {
+      flex-direction: row;
+      height: 300px;
+      justify-content: space-between;
+    }
+
+    .wraper {
+      max-width: 400px;
+
+      @include onTablet {
+        width: 400px;
+      }
+    }
+  }
 }
