--- a/src/components/BrowsingHistory/BrowsingHistory.scss
+++ b/src/components/BrowsingHistory/BrowsingHistory.scss
@@ -22,8 +22,10 @@
   }
 
   &__item {
+    padding: 5px;
     text-decoration: none;
     color: #000000;
     font-weight: 700;
+    font-size: 16px;
   }
 }
