--- a/src/additionalStyles/PrimaryButton.scss
+++ b/src/additionalStyles/PrimaryButton.scss
@@ -1,14 +1,16 @@
 @import '../utils/variables';
 
 .primButton {
-  background-color: $prymaryButton;
   color: #ffffff;
   text-shadow: 1px 1px 2px #000000;
+  background-color: $prymaryButton;
+  box-shadow: 2px 2px 2px #686565;
   border: none;
   border-radius: 5px;
-  box-shadow: 2px 2px 2px #686565;
+
   cursor: pointer;
   transition: 300ms;
+  -webkit-transition: 300ms;
 
   &:hover {
     background-color: $prymaryHoverButton;
@@ -16,6 +18,7 @@
 
   &:active {
     transform: translate(2px, 2px);
+    -webkit-transform: translate(2px, 2px);
     box-shadow: none;
   }
 }
