--- a/src/additionalStyles/PrimaryButton.scss
+++ b/src/additionalStyles/PrimaryButton.scss
@@ -11,6 +11,7 @@
   cursor: pointer;
   transition: 300ms;
   -webkit-transition: 300ms;
+  -moz-transition: 300ms;
 
   &:hover {
     background-color: $prymaryHoverButton;
@@ -19,6 +20,7 @@
   &:active {
     transform: translate(2px, 2px);
     -webkit-transform: translate(2px, 2px);
+    -moz-transform: translate(2px, 2px);
     box-shadow: none;
   }
 }
