--- a/src/utils/normalize.scss
+++ b/src/utils/normalize.scss
@@ -15,6 +15,8 @@
 
 * {
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 html {
@@ -23,7 +25,7 @@ html {
   font-weight: 400;
   font-size: 12px;
   line-height: 150%;
-  color: rgba(0, 0, 0, 0.87);
+  color: #000000;
 }
 
 body {
