--- a/src/components/Tracking/Tracking.scss
+++ b/src/components/Tracking/Tracking.scss
@@ -6,7 +6,6 @@
   &__container {
     display: flex;
     flex-direction: column;
-    gap: 20px;
 
     @include onTablet {
       flex-direction: row;
@@ -16,6 +15,7 @@
 
     .wraper {
       max-width: 400px;
+      height: 300px;
 
       @include onTablet {
         width: 400px;
